<resources>
    <string name="app_name">TextWriter</string>
    <string name="button_OK">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="radio_btn_10px">10px</string>
    <string name="radio_btn_20px">20px</string>
    <string name="radio_btn_30px">30px</string>
    <string name="placeholder">Enter your text</string>
    <string name="result_text" />
    <string name="texts">Open</string>
    <string name="text">Text</string>
    <string name="size">Size</string>
    <string name="delete">Delete</string>
    <string name="no_any_messages_yet">No any messages yet</string>
    <string name="open">Open</string>
</resources>